--- a/kodusorClient/kodusorClient/Views/Home/Index.cshtml
+++ b/kodusorClient/kodusorClient/Views/Home/Index.cshtml
@@ -50,47 +50,17 @@
 </ul>
 
 <script>
-    //$(function () {
-    //    $('#search').keypress(function (e) {
-    //        var key = e.which;
-    //        if (key == 13)
-    //        {
-    //            var data = {
-    //                aranacakSoru: $("#search").val()
-    //            };
-    //            $.post("/Home/SoruAra", data, function () {
-
-    //            });
-    //        }
-    //    });
-    //});
-
     $(function () {
         $('#search').keyup(function () {
-            $(".collection").empty();
             var data = {
                 aranacakSoru: $("#search").val()
             };
             $.post("/Home/SoruAra", data, function (sorular) {
+                $(".collection").empty();
                 $.each(sorular, function (i, item) {
-                    $(".collection").append('<li class="collection-item row"><div class="col m1 s1" ><i class="material-icons prefix">thumb_up</i><br />' + item.BegeniSayisi + '</div><div class="col m1 s1"><i class="material-icons prefix">chat_bubble</i><br /> ' + item.CevapSayisi + '</div><div class="col m7 s10"><a href="/Home/Soru/' + item.SoruID + '" class = "soruBaslik"><b>' + item.Baslik + '</b></a><br /><span class="soranKul">' + item.Kullanici.Adi + '</span></div><div class="col m3 s12 offset-s2"></div>'+item.Etiketler[0].EtiketAdi+'</li>');
+                    $(".collection").append('<li class="collection-item row"><div class="col m1 s1" ><i class="material-icons prefix">thumb_up</i><br />' + item.BegeniSayisi + '</div><div class="col m1 s1"><i class="material-icons prefix">chat_bubble</i><br /> ' + item.CevapSayisi + '</div><div class="col m7 s10"><a href="/Home/Soru/' + item.SoruID + '" class = "soruBaslik"><b>' + item.Baslik + '</b></a><br /><span class="soranKul">' + item.Kullanici.Adi + '</span></div></li>');
                 });
-            })
+            });
         });
     });
-    @*@Html.ActionLink(item.Baslik, "Soru", new { id = item.SoruID }, new { @class = "soruBaslik" })*@
-    //function SoruGetir(soruID) {
-    //    $(function () {
-
-    //        $("#soruGit").click(function(){
-    //            var data = {
-    //                id: soruID
-    //            };
-    //            $.post("/Home/Soru", data,function(){
-    //                location.window('/Home/Soru/'+soruID);
-    //            });
-    //        });
-
-    //    });
-    //}
 </script>
