Küçük dokunuşlar yapıldı.

--- a/kodusorClient/kodusorClient/Views/Home/Soru.cshtml
+++ b/kodusorClient/kodusorClient/Views/Home/Soru.cshtml
@@ -1,6 +1,6 @@
 ﻿@model kodusorClient.ViewModel.KullaniciModel
 @{
-    ViewBag.Title = "Soru";
+    ViewBag.Title = Model.Soru.Baslik;
     Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
 <h5>Soru</h5>
