--- a/kodusorClient/kodusorClient/Views/Home/Index.cshtml
+++ b/kodusorClient/kodusorClient/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<kodusorClient.kodusorServis.SoruListesi>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Kodusor";
     Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
 <br />
