--- a/kodusorClient/kodusorClient/Views/Shared/_LayoutHome.cshtml
+++ b/kodusorClient/kodusorClient/Views/Shared/_LayoutHome.cshtml
@@ -7,6 +7,7 @@
     <link href="~/Content/Site.css" rel="stylesheet" />
     <link href="~/Content/materialize.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" type="image/png" href="~/Images/favicon.ico" />
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/materialize.min.js"></script>
 </head>
@@ -90,9 +91,7 @@
                     <button id="KayitOl" class="waves-effect waves-light btn">Kayıt Ol</button>
                     <button id="mGiris" href="#modalGiris" class="waves-effect light-green darken-1 btn">Giriş Yap</button>
                 </div>
-
             </div>
-
         </div>
     </div>
     <!-- Kayıt Ol Modal Bitiş -->
